@@ -54,3 +54,6 @@ Reggie, 14.9.1998:
 - Fixed finally THE bug in KWString :-)
 - Totally integrated KWFormatCollecion
 - Fixed a bug in backspace
+- Fixed a bug with joining paragraphs
+- Fixed a redraw problem with delete/backspace, but there are still
+  problems with setting the cursor.
